syntax = "proto3";

package auth;

option go_package = "./pb";

// 生成Token请求
message GenerateTokenReq {
  int64 user_id = 1;
  string username = 2;
}

// 生成Token响应
message GenerateTokenResp {
  string access_token = 1;
  string refresh_token = 2;
  int64 expires_at = 3;
}

// 验证Token请求
message ValidateTokenReq {
  string token = 1;
}

// 验证Token响应
message ValidateTokenResp {
  bool valid = 1;
  int64 user_id = 2;
  string username = 3;
}

// 刷新Token请求
message RefreshTokenReq {
  string refresh_token = 1;
}

// 刷新Token响应
message RefreshTokenResp {
  string access_token = 1;
  string refresh_token = 2;
  int64 expires_at = 3;
}

// 注销Token请求
message RevokeTokenReq {
  string token = 1;
}

// 注销Token响应
message RevokeTokenResp {
  bool success = 1;
}

// 认证服务
service Auth {
  // 生成Token
  rpc GenerateToken(GenerateTokenReq) returns (GenerateTokenResp);
  // 验证Token
  rpc ValidateToken(ValidateTokenReq) returns (ValidateTokenResp);
  // 刷新Token
  rpc RefreshToken(RefreshTokenReq) returns (RefreshTokenResp);
  // 注销Token
  rpc RevokeToken(RevokeTokenReq) returns (RevokeTokenResp);
}
