syntax = "proto3";

package user;

option go_package = "github.com/Hao-yiwen/go-examples/go-zero/user-rpc/pb;pb";

// 用户信息
message UserInfo {
  int64 id = 1;
  string username = 2;
  string email = 3;
  string phone = 4;
  string avatar = 5;
  int64 status = 6;
  int64 created_at = 7;
  int64 updated_at = 8;
}

// 注册请求
message RegisterReq {
  string username = 1;
  string password = 2;
  string email = 3;
  string phone = 4;
}

// 注册响应
message RegisterResp {
  int64 id = 1;
  string username = 2;
}

// 登录请求
message LoginReq {
  string username = 1;
  string password = 2;
}

// 登录响应
message LoginResp {
  int64 id = 1;
  string username = 2;
}

// 获取用户信息请求
message GetUserInfoReq {
  int64 id = 1;
}

// 获取用户信息响应
message GetUserInfoResp {
  UserInfo user = 1;
}

// 更新用户信息请求
message UpdateUserReq {
  int64 id = 1;
  string email = 2;
  string phone = 3;
  string avatar = 4;
}

// 更新用户信息响应
message UpdateUserResp {
  bool success = 1;
}

// 删除用户请求
message DeleteUserReq {
  int64 id = 1;
}

// 删除用户响应
message DeleteUserResp {
  bool success = 1;
}

// 用户列表请求
message ListUserReq {
  int64 page = 1;
  int64 page_size = 2;
}

// 用户列表响应
message ListUserResp {
  repeated UserInfo users = 1;
  int64 total = 2;
}

// 用户服务
service User {
  // 用户注册
  rpc Register(RegisterReq) returns (RegisterResp);
  // 用户登录
  rpc Login(LoginReq) returns (LoginResp);
  // 获取用户信息
  rpc GetUserInfo(GetUserInfoReq) returns (GetUserInfoResp);
  // 更新用户信息
  rpc UpdateUser(UpdateUserReq) returns (UpdateUserResp);
  // 删除用户
  rpc DeleteUser(DeleteUserReq) returns (DeleteUserResp);
  // 用户列表
  rpc ListUser(ListUserReq) returns (ListUserResp);
}
